Dziala pobieranie lodowki